# atcoder-auto-submitter

./: .env.example  .gitignore  README.md  app.py  atcoder.py  get.py  main.py  pyproject.toml  requirements.txt  template.py
atcoder_auto_submitter/: .atcodertools.toml  app.py  main.py
